--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
           <div class="downloads">
           <span>    </span>
           <ul>
-              <li><a href="mailto:{{ site.admin_email }}" class="button"><span>申请加入</span></a></li>
+              <li><a href="mailto:{{ site.admin_email }}" class="button"><span>Join US</span></a></li>
               <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
               <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
             </ul>
