--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,8 @@
         {% endif %}
         {% if site.show_email %}
           <div class="downloads">
-          <span>    </span>
+          <span><a href="mailto:{{ site.admin_email }}" class="button">Join US</a></span>
           <ul>
-              <li><a href="mailto:{{ site.admin_email }}" class="button"><span>Join US</span></a></li>
               <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
               <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
             </ul>
